--- a/package.json
+++ b/package.json
@@ -8,17 +8,32 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@mdi/font": "^4.7.95",
     "core-js": "^3.4.4",
-    "vue": "^2.6.10"
+    "dns": "^0.2.2",
+    "firebase": "^7.7.0",
+    "firebase-admin": "^8.12.1",
+    "firebase-functions": "^3.6.1",
+    "http2": "^3.3.7",
+    "vue": "^2.6.10",
+    "vue-router": "^3.1.6",
+    "vuetify": "^2.1.0"
   },
   "devDependencies": {
+    "@mdi/js": "^5.2.45",
     "@vue/cli-plugin-babel": "^4.1.0",
     "@vue/cli-plugin-eslint": "^4.1.0",
     "@vue/cli-service": "^4.1.0",
     "babel-eslint": "^10.0.3",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
-    "vue-template-compiler": "^2.6.10"
+    "file-loader": "^6.0.0",
+    "material-design-icons-iconfont": "^5.0.1",
+    "sass": "^1.19.0",
+    "sass-loader": "^8.0.0",
+    "vue-cli-plugin-vuetify": "^2.0.3",
+    "vue-template-compiler": "^2.6.10",
+    "vuetify-loader": "^1.3.0"
   },
   "eslintConfig": {
     "root": true,
@@ -29,7 +44,9 @@
       "plugin:vue/essential",
       "eslint:recommended"
     ],
-    "rules": {},
+    "rules": {
+      "no-console": "off"
+    },
     "parserOptions": {
       "parser": "babel-eslint"
     }
