--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "firebase-functions": "^3.6.1",
     "http2": "^3.3.7",
     "vue": "^2.6.10",
+    "vue-adsense": "^1.0.1",
     "vue-router": "^3.1.6",
     "vuetify": "^2.1.0"
   },
