--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 VUE_APP_BASE_URL=https://zatsudan.me
-VUE_APP_SITE_NAME=雑談,みんなに聞きたい
+VUE_APP_SITE_NAME=HANASHIKA,雑談,みんなに聞きたい,今日の話題
 VUE_APP_TWITTER_ACCOUNT=yusuke_celalink
